--- a/views/admin/create.njk
+++ b/views/admin/create.njk
@@ -86,10 +86,13 @@
             </button>
         </div>
         <div class="item">
-            <div>Additional Information</div>
             <div>
+                <div>
+                    <label for="recipeInfo">Additional Information</label>
+                </div>
                 <textarea 
                     name="recipeInfo"
+                    id="recipeInfo"
                     cols="30" 
                     rows="5"
                 >
