--- a/views/admin/details.njk
+++ b/views/admin/details.njk
@@ -16,7 +16,7 @@
             <h2>Recipe: {{recipe.recipeName}}</h2>
         </div>
         <div id="button">
-            <a type="button" href="/admin/recipes/{{item.id}}/edit">Edit Recipe</a>
+            <a type="button" href="/admin/recipes/{{recipe.id}}/edit">Edit Recipe</a>
             <button></button>
         </div>
     </div>
