--- a/public/styles/admin.css
+++ b/public/styles/admin.css
@@ -7,10 +7,6 @@ header nav a#recipes {
     font-weight: bold;
 }
 
-.content2 {
-    margin-top: 58px;
-}
-
 .content2 .cards {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -49,6 +45,7 @@ h2 {
 }
 
 .content2 .cards .card img {
+    object-fit: cover;
     width: 278px;
     height: 120px;
     border-radius: 15px;
@@ -129,7 +126,7 @@ button[type="button"].add-prep {
 }
 
 .create-form button,
-.details-header button,
+.details-header a,
 .recipe-header #button {
     background: var(--main-color);
     color: var(--green-color);
@@ -138,6 +135,10 @@ button[type="button"].add-prep {
     border-radius: 4px;
     padding: 8px 16px 8px 16px;
     cursor: pointer;
+}
+
+.details-header a {
+    text-decoration: none;
 }
 
 .recipe-header #button {
@@ -150,10 +151,15 @@ button[type="button"].add-prep {
 }
 
 .create-form button:hover,
-.recipe-header #button:hover {
+.recipe-header #button:hover,
+.details-header a:hover {
     opacity: 0.7;
 }
 
 .details-header {
     width: 940px;
+}
+
+.content#content-details {
+    margin: 0 230px 32px 230px;
 }
