--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -45,11 +45,13 @@ header nav a#logo {
 header nav a#about {
     margin-left: 124px;
     margin-top: 30px;
+    width: 42px;
 }
 
 header nav a#recipes {
     margin-left: 30px;
     margin-top: 30px;
+    width: 58px;
 }
 
 header nav a#admin {
