--- a/views/admin/edit.njk
+++ b/views/admin/edit.njk
@@ -11,6 +11,10 @@
 {%block content%}
 
 <section class="create-form">
+    <form action="/admin/recipes?_method=DELETE" method="POST" id="delete-form">
+        <input type="hidden" name="id" value="{{recipe.id}}">
+        <button type="submit" id="delete-button">Delete Recipe</button>
+    </form>
     <form action="/admin/recipes?_method=PUT" method="POST">
         <div class="form-header">
             <div>
