--- a/views/admin/recipes.njk
+++ b/views/admin/recipes.njk
@@ -27,6 +27,7 @@
                 <div>
                     <h3>{{item.recipeName}}</h3>
                     <h4>by {{item.recipeAuthor}}</h4>
+                    <a href="/admin/recipes/{{item.id}}" id="visualize-recipe">Visualize</a>
                 </div>
             </div>
         {%endfor%}
