foodfy folders updated

--- a/src/app/views/admin/recipes/create.njk
+++ b/src/app/views/admin/recipes/create.njk
@@ -25,7 +25,7 @@
             <div>
                 <input
                     type="text"
-                    name="recipeImg"
+                    name="image"
                     placeholder="http://"
                 >
             </div>
@@ -35,7 +35,7 @@
             <div>
                 <input
                     type="text"
-                    name="recipeName"
+                    name="title"
                 >
             </div>
         </div>
@@ -44,7 +44,7 @@
             <div>
                 <input
                     type="text"
-                    name="recipeAuthor"
+                    name="author"
                 >
             </div>
         </div>
@@ -54,7 +54,7 @@
                 <div class="ingredient">
                     <input
                         type="text"
-                        name="recipeIngredients[]"
+                        name="ingredients[]"
                     >
                 </div>
             </div>
@@ -67,7 +67,7 @@
             <div>
                 <input
                     type="text"
-                    name="recipeTime"
+                    name="time"
                 >
             </div>
         </div>
@@ -77,7 +77,7 @@
                 <div class="prep">
                     <input
                         type="text"
-                        name="recipePrep[]"
+                        name="preparation[]"
                     >
                 </div>
             </div>
@@ -88,11 +88,11 @@
         <div class="item">
             <div>
                 <div>
-                    <label for="recipeInfo">Additional Information</label>
+                    <label for="information">Additional Information</label>
                 </div>
                 <textarea 
-                    name="recipeInfo"
-                    id="recipeInfo"
+                    name="information"
+                    id="information"
                 >
                 </textarea>
             </div>
