--- a/src/app/views/site/recipes/details.njk
+++ b/src/app/views/site/recipes/details.njk
@@ -1,4 +1,4 @@
-{%extends 'users/layout.njk'%}
+{%extends 'site/layout.njk'%}
 
 {%block head%}
 <title>Foodfy</title>
@@ -40,5 +40,5 @@
             </div>
     </div>
 </section>
-<script src="/users/scripts.js"></script>
+<script src="/site/scripts.js"></script>
 {%endblock%}
