--- a/src/app/views/site/recipes/index.njk
+++ b/src/app/views/site/recipes/index.njk
@@ -1,4 +1,4 @@
-{%extends 'users/layout.njk'%}
+{%extends 'site/layout.njk'%}
 
 {%block head%}
 <title>Foodfy</title>
@@ -30,5 +30,5 @@
         </div>
         {%endfor%}
 </section>
-<script src="/users/scripts.js"></script>
+<script src="/site/scripts.js"></script>
 {%endblock%}
