--- a/src/app/views/site/recipes/recipes.njk
+++ b/src/app/views/site/recipes/recipes.njk
@@ -1,4 +1,4 @@
-{%extends 'users/layout.njk'%}
+{%extends 'site/layout.njk'%}
 
 {%block head%}
 <title>Foodfy</title>
@@ -21,5 +21,5 @@
         {%endfor%}
     </div>
 </section>
-<script src="/users/scripts.js"></script>
+<script src="/site/scripts.js"></script>
 {%endblock%}
