chefs area updated

--- a/src/app/views/admin/chefs/chefs.njk
+++ b/src/app/views/admin/chefs/chefs.njk
@@ -26,7 +26,7 @@
                 </div>
                 <div>
                     <h3>{{chef.name}}</h3>
-                    <a href="/admin/chefs/{{chefs.id}}" id="visualize-chef">Visualize</a>
+                    <a href="/admin/chefs/{{chef.id}}" id="visualize-chef">Visualize</a>
                 </div>
             </div>
         {%endfor%}
