--- a/src/app/views/admin/chefs/details.njk
+++ b/src/app/views/admin/chefs/details.njk
@@ -13,27 +13,18 @@
 <section class="content" id="content-details">
     <div class="details-header">
         <div>
-            <h2>Chef: {{chefs.name}}</h2>
+            <h2>Chef: {{chef.name}}</h2>
         </div>
         <div id="button">
             <a type="button" href="/admin/recipes/{{recipe.id}}/edit">Edit Chef</a>
         </div>
     </div>
     <div class="recipes">
-            <div class="recipe-card" id="{{recipe.id}}">
-                <img src="{{chefs.avatar_url}}" alt="{{chefs.name}}">
-                <h2>{{chefs.name}}</h2>
+            <div class="recipe-card" id="{{chef.id}}">
+                <img src="{{chef.avatar_url}}" alt="{{chef.name}}">
+                <h2>{{chef.name}}</h2>
                 <h4></h4>
             </div>
-            <div class="recipes-content">
-                <div class="recipe-ingredients">
-                    <h3>Ingredients</h3>
-                    <ul>
-                    {%for ingredient in recipe.recipeIngredients%}
-                        <li>{{ingredient}}</li>
-                    {%endfor%}
-                    </ul>
-                </div>
     </div>
 </section>
 <script src="/admin/scripts.js"></script>
