--- a/src/app/views/admin/layout.njk
+++ b/src/app/views/admin/layout.njk
@@ -16,6 +16,8 @@
         <header>
             <nav class="menu">
                 <a href="/" id="logo"><img src="/logo-white.png" alt="Logo Foodfy"></a>
+                <a href="/admin/recipes" id="about">Recipes</a>
+                <a href="/admin/chefs" id="recipes">Chefs</a>
             </nav>
         </header>
 
