foodfy admin area crud done

--- a/src/app/views/admin/chefs/create.njk
+++ b/src/app/views/admin/chefs/create.njk
@@ -11,7 +11,7 @@
 {%block content%}
 
 <section class="create-form">
-    <form action="/admin/chefs/chefs" method="POST">
+    <form action="/admin/chefs" method="POST">
         <div class="form-header">
             <div>
                 <h2>Create Chef</h2>
