--- a/src/app/views/admin/chefs/edit.njk
+++ b/src/app/views/admin/chefs/edit.njk
@@ -11,6 +11,10 @@
 {%block content%}
 
 <section class="create-form">
+    <form action="/admin/chefs?_method=DELETE" method="POST" id="delete-form">
+        <input type="hidden" name="id" value="{{chef.id}}">
+        <button type="submit" id="delete-button">Delete Chef</button>
+    </form>
     <form action="/admin/chefs?_method=PUT" method="POST">
         <div class="form-header">
             <div>
