foodfy admin area updated

--- a/src/app/views/admin/chefs/details.njk
+++ b/src/app/views/admin/chefs/details.njk
@@ -24,7 +24,7 @@
                 <img src="{{chef.avatar_url}}" alt="{{chef.name}}">
                 <h2>{{chef.name}}</h2>
                 <h3>Member since: {{chef.created_at}}</h3>
-                <h4></h4>
+                <h4>{{recipe.total_recipes}} recipes</h4>
             </div>
     </div>
 </section>
