--- a/src/app/views/admin/recipes/edit.njk
+++ b/src/app/views/admin/recipes/edit.njk
@@ -40,7 +40,7 @@
             <div>
                 <select name="chef">
                     {%for chef in chefOptions%}
-                        <option value="{{chef.id}}" {%if recipes.chef_id == chef.id%}selected{%endif%}>
+                        <option value="{{chef.id}}" {%if recipe.chef_id == chef.id%}selected{%endif%}>
                             {{chef.name}}
                         </option>
                     {%endfor%}
