--- a/src/app/views/admin/chefs/details.njk
+++ b/src/app/views/admin/chefs/details.njk
@@ -10,7 +10,7 @@
 {%endblock%}
 
 {%block content%}
-<section class="content" id="content-details">
+<section class="content3" id="content-details">
     <div class="details-header">
         <div>
             <h2>Chef: {{chef.name}}</h2>
@@ -26,6 +26,20 @@
                 <h3>Member since: {{chef.created_at}}</h3>
                 <h4>{{recipe.total_recipes}} recipes</h4>
             </div>
+    </div>
+    <div class="cards">
+            {%for recipe in recipes%}
+                <div class="card" id="{{recipe.id}}">
+                    <div>
+                        <img src="{{recipe.image}}" alt="{{recipe.id}}">
+                    </div>
+                    <div>
+                        <h3>{{recipe.title}}</h3>
+                        <h4>by {{recipe.chefs_name}}</h4>
+                        <a href="/admin/recipes/{{recipes.id}}" id="visualize-recipe">Visualize</a>
+                    </div>
+                </div>
+            {%endfor%}
     </div>
 </section>
 <script src="/admin/scripts.js"></script>
