--- a/public/styles/admin/chefs.css
+++ b/public/styles/admin/chefs.css
@@ -31,7 +31,7 @@ h2 {
 }
 
 .form-header h2,
-.content h2 {
+.content2 h2 {
     margin: 50px 0 30px 140px;
 }
 
@@ -72,13 +72,6 @@ h2 {
     color: var(--green-color);
     margin-top: 1.8% 0 0.5% 0;
     width: 200px;
-}
-
-.content2 .cards .card h4 {
-    font-size: 14px;
-    font-weight: lighter;
-    color: #777777;
-    margin: 4px 0 8px 0;
 }
 
 form #delete-form {
@@ -193,7 +186,7 @@ button[type="button"].add-prep {
     margin: 32px 230px;
 }
 
-.content3 .chefs .chef-card img {
+.content .chefs .chef-card img {
     object-fit: cover;
     width: 200px;
     height: 200px;
@@ -202,6 +195,7 @@ button[type="button"].add-prep {
 
 .chefs .chef-card {
     text-align: center;
+    margin-bottom: 50px;
 }
 
 .content .chefs .chef-card h2 {
@@ -211,42 +205,23 @@ button[type="button"].add-prep {
     font-weight: bold;
 }
 
-.content .chefs .chefs-content h3 {
-    font-size: 24px;
-    color: var(--green-color);
-    margin-bottom: 20px;
+.content .chefs h3 {
+    font-size: 16px;
+    color: var(--main-color);
+    margin: 8px;
 }
 
-.content3 .cards {
+.content .cards {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 36px;
     width: 300px;
-    margin-left: 16.4%;
+    margin-top: 16px;
 }
 
-h2 {
-    font-size: 24px;
-    color: var(--green-color);
-    line-height: 34px;
-}
-
-.form-header h2,
-.content h2 {
-    margin: 50px 0 30px 220px;
-}
-
-.content3 .details-header h2 {
-    margin: 48px 0 24px 0;
-}
-
-.content3 .cards .card {
+.content .cards .card {
     display: grid;
     grid-template-columns: 1fr 1fr;
-}
-
-.cards .card {
-    position: relative;
 }
 
 .cards .card a#visualize-recipe {
@@ -259,7 +234,7 @@ h2 {
     font-weight: bold;
 }
 
-.content3 .cards .card img {
+.content .cards .card img {
     object-fit: cover;
     width: 278px;
     height: 120px;
@@ -267,14 +242,15 @@ h2 {
     margin-right: 20px;
 }
 
-.content3 .cards .card h3 {
+.content .cards .card h3 {
     font-size: 18px;
     color: var(--green-color);
     margin-top: 1.8% 0 0.5% 0;
     width: 200px;
 }
 
-.content3 .cards .card h4 {
+.content .cards .card h4,
+.chefs .chef-card h4 {
     font-size: 14px;
     font-weight: lighter;
     color: #777777;
