--- a/src/app/views/admin/layout.njk
+++ b/src/app/views/admin/layout.njk
@@ -16,15 +16,17 @@
         <header>
             <nav class="menu">
                 <a href="/" id="logo"><img src="/logo-white.png" alt="Logo Foodfy"></a>
-                <a href="/admin/recipes" id="about">Recipes</a>
-                <a href="/admin/chefs" id="recipes">Chefs</a>
+                <a href="/admin/recipes" id="recipes">Recipes</a>
+                <a href="/admin/chefs" id="chefs">Chefs</a>
             </nav>
         </header>
 
         {%block content%}{%endblock%}
-        <footer>
-            <p>All rights reserved, Foodfy recipes.</p>
-        </footer>
+        <div class="footer-box">
+            <footer>
+                <p>All rights reserved, Foodfy recipes.</p>
+            </footer>
+        </div>
     </body>
 
 </html>
