--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -54,6 +54,12 @@ header nav a#recipes {
     width: 58px;
 }
 
+header nav a#chefs {
+    margin-left: 30px;
+    margin-top: 30px;
+    width: 58px;
+}
+
 header nav a#admin {
     margin-left: 340px;
     margin-top: 30px;
