--- a/src/app/views/site/recipes/details.njk
+++ b/src/app/views/site/recipes/details.njk
@@ -14,7 +14,7 @@
             <div class="recipe-card" id="{{recipe.id}}">
                 <img src="{{recipe.image}}" alt="{{recipe.id}}">
                 <h2>{{recipe.title}}</h2>
-                <h4>by {{recipe.chef_id}}</h4>
+                <h4>by {{recipe.chefs_name}}</h4>
             </div>
             <div class="recipes-content">
                 <div class="recipe-ingredients">
