--- a/src/app/views/site/recipes/index.njk
+++ b/src/app/views/site/recipes/index.njk
@@ -26,7 +26,7 @@
             <img src="{{recipe.image}}" alt="{{recipe.id}}">
             <div class="preparation-time">{{recipe.time}}</div>
             <h3>{{recipe.title}}</h3>
-            <h4>by {{recipe.chef_id}}</h4>
+            <h4>by {{recipe.chefs_name}}</h4>
         </div>
         {%endfor%}
 </section>
