search option updated

--- a/src/app/views/site/layout.njk
+++ b/src/app/views/site/layout.njk
@@ -19,7 +19,7 @@
                 <a href="/about" id="about">About</a>
                 <a href="/recipes" id="recipes">Recipes</a>
                 <a href="/" id="chefs">Chefs</a>
-                <form action="/recipes" method="GET">
+                <form action="/search" method="GET">
                     <input
                         type="text"
                         name="filter"
