--- a/src/app/views/admin/chefs/chefs.njk
+++ b/src/app/views/admin/chefs/chefs.njk
@@ -5,7 +5,7 @@
 {%endblock%}
 
 {%block styles%}
-<link rel="stylesheet" href="/admin/chefs.css">
+<link rel="stylesheet" href="/chefs.css">
 {%endblock%}
 
 {%block content%}
