--- a/src/app/views/admin/chefs/details.njk
+++ b/src/app/views/admin/chefs/details.njk
@@ -6,7 +6,7 @@
 
 {%block styles%}
 <link rel="stylesheet" href="/details.css">
-<link rel="stylesheet" href="/admin/chefs.css">
+<link rel="stylesheet" href="/chefs.css">
 {%endblock%}
 
 {%block content%}
