--- a/src/app/views/site/layout.njk
+++ b/src/app/views/site/layout.njk
@@ -18,7 +18,7 @@
                 <a href="/" id="logo"><img src="/logo-white.png" alt="Logo Foodfy"></a>
                 <a href="/about" id="about">About</a>
                 <a href="/recipes" id="recipes">Recipes</a>
-                <a href="/" id="chefs">Chefs</a>
+                <a href="/chefs" id="chefs">Chefs</a>
                 <form action="/search" method="GET">
                     <input
                         type="text"
