--- a/public/styles/details.css
+++ b/public/styles/details.css
@@ -7,6 +7,32 @@
     margin: 32px 230px;
 }
 
+.content .cards {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 36px;
+}
+
+.content .card:hover {
+    opacity: 0.7;
+    cursor: pointer;
+}
+
+.content .cards .card {
+    position: relative;
+}
+
+.content .card .preparation-time {
+    font-size: 12px;
+    position: absolute;
+    top: 108px;
+    right: 250px;
+    background-color: var(--main-color);
+    color: var(--green-color);
+    border-radius: 30px;
+    padding: 4px 8px;
+}
+
 .recipes-content a#button1,
 .recipes-content a#button2,
 .recipes-content a#button3 {
