--- a/src/app/views/site/layout.njk
+++ b/src/app/views/site/layout.njk
@@ -19,6 +19,7 @@
                 <a href="/about" id="about">About</a>
                 <a href="/recipes" id="recipes">Recipes</a>
                 <a href="/chefs" id="chefs">Chefs</a>
+                <a href="/admin/recipes" id="admin">Admin</a>
                 <form action="/search" method="GET">
                     <input
                         type="text"
