--- a/public/styles/chefs.css
+++ b/public/styles/chefs.css
@@ -22,7 +22,7 @@ header nav a#chefs {
     margin: 0 10%;
 }
 
-.content2 .card:hover {
+.content2#chefs-content .card:hover {
     opacity: 0.7;
     cursor: pointer;
 }
