--- a/public/styles/admin.css
+++ b/public/styles/admin.css
@@ -189,3 +189,24 @@ button[type="button"].add-prep {
 .content#content-details {
     margin: 0 230px 32px 230px;
 }
+
+form .item #photos-upload button {
+    border: 1px solid #DDDDDD;
+    width: 149px;
+    height: 149px;
+    background: #FFFFFF;
+    border-radius: 4px;
+}
+
+form .item #photos-input {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    cursor: pointer;
+    display: block;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+}
