--- a/src/app/views/admin/recipes/create.njk
+++ b/src/app/views/admin/recipes/create.njk
@@ -22,7 +22,7 @@
         </div>
         <div class="item">
             <div>Recipe Images</div>
-            <div>
+            <div class="photos-header">
                 <div id="photos-upload">
                     <input
                         type="file"
@@ -30,6 +30,7 @@
                         id="photos-input"
                         multiple
                         accept="image/*"
+                        onchange="PhotosUpload.handleFileInput(event)"
                     >
                     <button>
                         <i class="material-icons">
