--- a/public/styles/admin.css
+++ b/public/styles/admin.css
@@ -237,3 +237,25 @@ form .item #photos-preview img {
     border-radius: 4px;
     object-fit: cover;
 }
+
+#photos-preview .photo {
+    position: relative;
+}
+
+#photos-preview .photo i {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: rgba(255, 255, 255, 0.8);
+    color: var(--main-color);
+    width: 100%;
+    height: 100%;
+    font-size: 250%;
+    cursor: pointer;
+    transition: opacity 200ms;
+    opacity: 0;
+}
+
+#photos-preview .photo:hover i {
+    opacity: 1;
+}
