--- a/src/app/views/admin/recipes/create.njk
+++ b/src/app/views/admin/recipes/create.njk
@@ -11,7 +11,7 @@
 {%block content%}
 
 <section class="create-form">
-    <form action="/admin/recipes" method="POST">
+    <form action="/admin/recipes" method="POST" enctype="multipart/form-data">
         <div class="form-header">
             <div>
                 <h2>Create Recipe</h2>
