--- a/src/app/views/admin/recipes/edit.njk
+++ b/src/app/views/admin/recipes/edit.njk
@@ -11,7 +11,7 @@
 {%block content%}
 
 <section class="create-form">
-    <form action="/admin/recipes?_method=DELETE" method="POST" id="delete-form">
+    <form action="/admin/recipes?_method=DELETE" method="POST" id="delete-form" enctype="multipart/form-data>
         <input type="hidden" name="id" value="{{recipe.id}}">
         <button type="submit" id="delete-button">Delete Recipe</button>
     </form>
