--- a/src/app/views/admin/recipes/create.njk
+++ b/src/app/views/admin/recipes/create.njk
@@ -105,11 +105,7 @@
                 <div>
                     <label for="information">Additional Information</label>
                 </div>
-                <textarea 
-                    name="information"
-                    id="information"
-                >
-                </textarea>
+                <textarea name="information" id="information"></textarea>
             </div>
         </div>
     </form>
